Archive2/7b/2c803331bc38e2/output
+ clang++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:5:14: error: member reference base type 'int *' is not a structure or union
    int n = a.size(), m = b.size(); //IS THIS LEGAL?
            ~^~~~~
main.cpp:5:28: error: member reference base type 'int *' is not a structure or union
    int n = a.size(), m = b.size(); //IS THIS LEGAL?
                          ~^~~~~
main.cpp:32:28: error: use of undeclared identifier 'first'
    return merge(mergeSort(first,SIZE OF FIRST),mergeSort(last, SIZE OF LAST));
                           ^
main.cpp:39:9: warning: unused variable 'arr' [-Wunused-variable]
    int arr[7];
        ^
main.cpp:40:9: warning: unused variable 'sorted' [-Wunused-variable]
    int sorted[7];
        ^
main.cpp:43:1: error: extraneous closing brace ('}')
}
^
2 warnings and 4 errors generated.
